package gpt.persistense;

import gpt.domain.Formular;

public interface FormularRepository {
    void save(Formular formular);
}
